k8s/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector: { app: homepage }
  ports:
    - port: 3000
      targetPort: http
